--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#ff6b6b" />
-    <meta name="description" content="シカゴの日本人駐在妻向けのコミュニティプラットフォーム" />
-    
+    <meta
+      name="description"
+      content="シカゴの日本人駐在妻向けのコミュニティプラットフォーム"
+    />
+
     <!-- PWA Meta Tags -->
     <link rel="manifest" href="/manifest.json" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="HelloChicago" />
-    
+
     <title>HelloChicago - シカゴ駐在妻コミュニティ</title>
   </head>
   <body>
