--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Favicon and Icons -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.svg" />
+    <link rel="icon" type="image/svg+xml" sizes="192x192" href="/icon-192x192.svg" />
+    <link rel="icon" type="image/svg+xml" sizes="512x512" href="/icon-512x512.svg" />
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#ff6b6b" />
     <meta
@@ -15,6 +20,11 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="HelloChicago" />
+    
+    <!-- Additional iOS Icons -->
+    <meta name="apple-touch-icon" content="/apple-touch-icon.svg" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
     <title>HelloChicago - シカゴ駐在妻コミュニティ</title>
   </head>
