--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="icon" type="image/png" sizes="512x512" href="/icon-512x512.png?v=3" />
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#ff6b6b" />
+    <meta name="theme-color" content="#ffffff" />
     <meta
       name="description"
       content="シカゴの日本人駐在妻向けのコミュニティプラットフォーム"
@@ -30,7 +30,7 @@
     <!-- PWA Meta Tags -->
     <link rel="manifest" href="/manifest.json?v=3" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="light-content" />
     <meta name="apple-mobile-web-app-title" content="HelloChicago" />
     
     <!-- Additional Meta for PWA -->
