--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    
-    <!-- Cache Control for Icons -->
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-    <meta http-equiv="Pragma" content="no-cache" />
-    <meta http-equiv="Expires" content="0" />
+        <!-- Cache Control for App (モバイルアプリライクな挙動のため) -->
+    <meta http-equiv="Cache-Control" content="public, max-age=3600" />
+    <meta name="apple-mobile-web-app-cache" content="yes" />t="0" />
     
     <!-- Favicon and Icons -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
